@@ -12,11 +12,12 @@ Eterm.1.html: Eterm.1
 
 install-data-hook:
 	$(TIC) Eterm.ti || (mkinstalldirs $(HOME)/.terminfo && $(TIC) -o$(HOME)/.terminfo Eterm.ti) || :
-	-infocmp -C -sc Eterm | sed -e '/Reconstructed/d' -e '/\.\.sa=/d' \
-	  -e 's!^\([[:space:]]:co#.*\):\\$$!\1:pa#64:Co#8:AF=\\E[3%dm:AB=\\E[4%dm:\\!' \
-	  > Eterm.tcap.new && mv Eterm.tcap.new Eterm.tcap || rm -f Eterm.tcap.new
+	-(infocmp -C -sc Eterm | sed -e '/Reconstructed/d' -e '/\.\.sa=/d' \
+	  -e 's!^\([[:space:]]:co#.*\):\\$$!\1:pa#64:Co#8:AF=\\E[3%dm:AB=\\E[4%dm:op=\\E[39m\\E[49m:\\!' \
+	  -e 's!:$$!:\\!' ; echo '	:ac=``aaffggiijjkkllmmnnooppqqrrssttuuvvwwxxyyzz{{||}}~~:' \
+	  ) > Eterm.tcap.new && mv Eterm.tcap.new Eterm.tcap || rm -f Eterm.tcap.new
 	-if test -f /usr/share/misc/termcap && test -f Eterm.tcap ; then \
-	    grep 'Eterm-color' /usr/share/misc/termcap || cat Eterm.tcap >> /usr/share/misc/termcap ; \
+	    grep -i 'Eterm Terminal Emulator' /usr/share/misc/termcap || cat Eterm.tcap >> /usr/share/misc/termcap ; \
 	    cap_mkdb termcap ; \
 	fi || :
 
